<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#FFFFFF"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:background="#FFFFFF"
        android:weightSum="1">

        <!-- Logo Cashtastic -->
        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:src="@mipmap/cashtastic_logo" />

        <!--  Security-Question Text -->
        <TextView android:id="@+id/securityText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="3dp"
            android:text="@string/view_security_question"
            android:gravity="left"
            android:textSize="16sp"/>

        <!--  Security-Question Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="8dp">
            <EditText android:id="@+id/input_seqQuestionF"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapWords"
                android:hint="@string/view_childhood_hero"/>
        </android.support.design.widget.TextInputLayout>

        <!-- Forgot Password Button-->
        <android.support.v7.widget.AppCompatButton
        android:id="@+id/btn_forgot_password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="12dp"
        android:padding="12dp"
        android:text="@string/view_next"/>

        <!-- Link to Login -->
        <TextView android:id="@+id/link_login"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/view_cancel"
            android:gravity="center"
            android:textSize="16sp"/>

    </LinearLayout>
</ScrollView>